# rensheng-fuben

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  prompt.txt  pyproject.toml  requirements-gemini.txt  requirements.txt  run_demo.py  start_workbench.bat  start_workbench.ps1
app/: __init__.py  audio_assets.py  errors.py  ffmpeg_utils.py  image_adapter.py  intro_templates.py  llm_adapter.py  main.py  paths.py  pipeline.py  project_service.py  render_constants.py  render_service.py  routes_assets.py  routes_generation.py  routes_project.py  routes_prompts.py  routes_render.py  schemas.py  subtitle_renderer.py  tts_adapter.py  upload_service.py
examples/: buffet_story.json
prompts/: copy_to_story.md  copy_xianxia.md  image_prompt_improve.md  image_style.md  story_shots.md  theme_plan.md
scripts/: smoke_check.py
static/: app.js  index.html  style.css
static/js/: api.js  constants.js  html.js  image-state.js  project-store.js  settings.js  story-view.js  ui.js  workflow-connection.js  workflow-copy.js  workflow-image.js  workflow-media.js  workflow-render.js  workflow-theme.js  workflow-utils.js  workflow.js
