[project]
name = "rensheng-fuben"
version = "0.1.0"
description = "A local AI short video workbench"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "edge-tts>=6.1",
    "pillow>=10.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
